<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.srinivas.apps.sr500pxapplication.login.ui.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_white"
        android:ems="14"
        android:hint="@string/hint_user_name_e_mail"
        android:padding="@dimen/margin_5"
        android:text="srinivasony@gmail.com"/>

    <EditText
        android:id="@+id/passcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/background_white"
        android:ems="14"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/margin_5"
        android:text="Padmaja@4237"/>

    <Button
        android:id="@+id/doLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/background_white"
        android:ems="14"
        android:padding="@dimen/margin_5"
        android:text="@string/label_submit"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

</LinearLayout>
